# Pathfinder-Optical-Simulation

./: .gitignore  CMakeLists.txt  LICENSE  PointSourceShellMain.cc  readme.md
config/: BuildOpticalProperty.py  CMakeLists.txt  GeometryParameters.hh  config.yaml  optical_properties.yaml  testNpy.py
include/: BuilderElement.hh  Control.hh  DetectorConstruction.hh  DirectoryHelper.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  ShellDC.hh  ShellSD.hh  SphericalSourceEA.hh  SphericalSourcePGA.hh  SphericalSourceRA.hh  SphericalSourceSA.hh  SteppingAction.hh  TrackInformation.hh
modules/cnpy/: CMakeLists.txt  cnpy.cpp  cnpy.hpp
src/: BuilderElement.cc  Control.cc  DetectorConstruction.cc  DirectoryHelper.cc  EventAction.cc  Main.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  ShellDC.cc  ShellSD.cc  SphericalSourceEA.cc  SphericalSourcePGA.cc  SphericalSourceRA.cc  SphericalSourceSA.cc  SteppingAction.cc  TrackInformation.cc
